objects/Competitive_Info__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Competitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competitor_Name__c</fullName>
        <label>Competitor Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1099 Pro</fullName>
                </value>
                <value>
                    <fullName>5280 Magazine</fullName>
                </value>
                <value>
                    <fullName>AAC</fullName>
                </value>
                <value>
                    <fullName>ABA-ALI Continuing Professional Education</fullName>
                </value>
                <value>
                    <fullName>Abacus Law</fullName>
                </value>
                <value>
                    <fullName>Absolute Tax</fullName>
                </value>
                <value>
                    <fullName>AccessData</fullName>
                </value>
                <value>
                    <fullName>Aderant</fullName>
                </value>
                <value>
                    <fullName>Aderant - Total Office</fullName>
                </value>
                <value>
                    <fullName>Advantage Law</fullName>
                </value>
                <value>
                    <fullName>Allegro</fullName>
                </value>
                <value>
                    <fullName>AlphaTax</fullName>
                </value>
                <value>
                    <fullName>AlternaDev</fullName>
                </value>
                <value>
                    <fullName>Amber Road</fullName>
                </value>
                <value>
                    <fullName>Amicus Attorney</fullName>
                </value>
                <value>
                    <fullName>AmLaw Economic Survey</fullName>
                </value>
                <value>
                    <fullName>Atlantax Systems, Inc</fullName>
                </value>
                <value>
                    <fullName>Atlassian Confluence</fullName>
                </value>
                <value>
                    <fullName>ATO</fullName>
                </value>
                <value>
                    <fullName>Attorney at Law Magazine</fullName>
                </value>
                <value>
                    <fullName>Attorneys Online</fullName>
                </value>
                <value>
                    <fullName>Avalara</fullName>
                </value>
                <value>
                    <fullName>Avvo</fullName>
                </value>
                <value>
                    <fullName>BankruptcyPRO</fullName>
                </value>
                <value>
                    <fullName>Bar Associations</fullName>
                </value>
                <value>
                    <fullName>Becker</fullName>
                </value>
                <value>
                    <fullName>Best Case</fullName>
                </value>
                <value>
                    <fullName>Best Lawyers</fullName>
                </value>
                <value>
                    <fullName>Bloomberg/BNA (Bureau of National Affairs)</fullName>
                </value>
                <value>
                    <fullName>BluePrint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitor_Notes__c</fullName>
        <label>Competitor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Competitive_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Cost__c</fullName>
        <label>Initial Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LCRM_TR_Competitors__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as part of LTS-4338 for Lotus(USL, Corp, Canada)</description>
        <label>TR Competitor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select active competitor</errorMessage>
            <filterItems>
                <field>TR_Competitors__c.Status__c</field>
                <operation>notEqual</operation>
                <value>Inactive</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>TR_Competitors__c</referenceTo>
        <relationshipLabel>Competitive Intelligence</relationshipLabel>
        <relationshipName>Competitive_Intelligence</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mood__c</fullName>
        <label>Mood</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hate it</fullName>
                </value>
                <value>
                    <fullName>Indifferent</fullName>
                </value>
                <value>
                    <fullName>Like it</fullName>
                </value>
                <value>
                    <fullName>Love it</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <inlineHelpText>This field is only required when selecting &quot;Other (Specify Name)&quot; from within the Competitor Name field list of values.
Created by: Radhika Pawar 
DPS-406 Add Other Competitor on the Competitive Info Object</inlineHelpText>
        <label>Other- Competitor Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Competitive_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Type__c</fullName>
        <label>Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price per Month</fullName>
                </value>
                <value>
                    <fullName>Price per Quarter</fullName>
                </value>
                <value>
                    <fullName>Price per Year</fullName>
                </value>
                <value>
                    <fullName>One-Time Fee</fullName>
                </value>
                <value>
                    <fullName>Customized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DPS-4984</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Name_2__c</fullName>
        <inlineHelpText>The name of the TR product that is comparable to the competitor&apos;s product.</inlineHelpText>
        <label>TR Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type_2__c</fullName>
        <inlineHelpText>The high-level categorization of the TR product that is comparable to the competitor&apos;s product.</inlineHelpText>
        <label>TR Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annotation Service</fullName>
                </value>
                <value>
                    <fullName>e-book</fullName>
                </value>
                <value>
                    <fullName>International Product</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Practice Management</fullName>
                </value>
                <value>
                    <fullName>Presence/Visits</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Software as a Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <inlineHelpText>The high-level categorization of the competitor&apos;s product.</inlineHelpText>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Print</fullName>
                </value>
                <value>
                    <fullName>Software</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Software as a Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Cost_Type__c</fullName>
        <label>Recurring Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price per Month</fullName>
                </value>
                <value>
                    <fullName>Price per Quarter</fullName>
                </value>
                <value>
                    <fullName>Price per Year</fullName>
                </value>
                <value>
                    <fullName>One-Time Fee</fullName>
                </value>
                <value>
                    <fullName>Customized</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recurring_Cost__c</fullName>
        <label>Recurring Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>DPS-4984
Add Status field on the Competitive Intelligence Object</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Competitive Intelligence</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Competitive Intelligence ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Competitive Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Competitor_Name_field_is_required</fullName>
        <active>true</active>
        <description>Competitor Name field is required</description>
        <errorConditionFormula>AND(ISPICKVAL(Competitor_Name__c,&apos;&apos;),Opportunity__r.Is_GLI__c =false)</errorConditionFormula>
        <errorMessage>Competitor Name field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LCRM_Competitor_Name_field_is_required</fullName>
        <active>true</active>
        <description>Name field is required when selecting &quot;Other (Specify Name)&quot; from within the Competitor Name field list of values.

DPS-406 :Add Other Competitor on the Competitive Info Objec</description>
        <errorConditionFormula>(LCRM_TR_Competitors__r.Name= &apos;Other&apos; || LOWER(LCRM_TR_Competitors__r.Name) = &apos;other&apos; ) &amp;&amp; ( ISNULL(Name__c ) ||ISBLANK(Name__c) )
&amp;&amp;  (Opportunity__r.Is_GLI__c =true ||  Account__r.Is_GLI__c = true)</errorConditionFormula>
        <errorDisplayField>Name__c</errorDisplayField>
        <errorMessage>Please Enter Competitor Name in the &quot;Other- Competitor Name&quot; field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Name_required</fullName>
        <active>true</active>
        <description>Name field is required when selecting &quot;Other (Specify Name)&quot; from within the Competitor Name field list of values.</description>
        <errorConditionFormula>ISPICKVAL( Competitor_Name__c , &apos;Other (Specify Name)&apos;) &amp;&amp; ( ISNULL(Name__c ) ||ISBLANK(Name__c) ) &amp;&amp;  Opportunity__r.Is_GLI__c =false</errorConditionFormula>
        <errorMessage>Name field is required when selecting &quot;Other (Specify Name)&quot; from within the Competitor Name field list of values.</errorMessage>
    </validationRules>
</CustomObject>